manifests/homeautomator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeautomator
spec:
  selector:
    matchLabels:
      app: homeautomator
  template:
    metadata:
      labels:
        app: homeautomator
    spec:
      containers:
      - name: homeautomator
        image: quay.io/tsaarni/home-automator:latest
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        configMap:
          name: homeautomator-config
