manifests/grafana.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        # https://hub.docker.com/r/grafana/grafana
        # https://grafana.com/docs/grafana/latest/installation/kubernetes/
        # https://grafana.com/docs/grafana/latest/installation/docker/
        #   default login: admin:admin
        - name: grafana
          image: grafana/grafana:9.5.14
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /etc/grafana
              name: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana
        - name: config
          configMap:
            name: grafana-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
