manifests/nodered.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
        - name: nodered
          image: localhost/nodered:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 1880
          securityContext:
            runAsUser: 9999
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nodered
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
