manifests/zigbee2mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        # https://github.com/Koenkk/zigbee2mqtt/blob/master/docker/Dockerfile
        # https://hub.docker.com/r/koenkk/zigbee2mqtt/
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.40.2
          # command:
          #   - "/bin/sleep"
          # args:
          #   - "9999"
          securityContext:
            runAsUser: 9999
            runAsGroup: 20 # gid 20 == dialout
            privileged: true # https://github.com/kubernetes/kubernetes/issues/5607
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /dev/zigbee
              name: tty
            - mountPath: /run/udev
              name: udev
              readOnly: true
          ports:
            - containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: zigbee2mqtt-config
            defaultMode: 0600
        - name: data
          hostPath:
            path: /volumes/zigbee2mqtt
        - name: tty
          hostPath:
            path: /dev/ttyUSB0
        - name: udev
          hostPath:
            path: /run/udev
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - port: 80
      targetPort: 8080

# Error: Error while opening serialport 'Error: Error Resource temporarily unavailable Cannot lock port'
# then run
#    kubectl delete -f manifests/zigbee2mqtt.yaml
#    kubectl apply -f manifests/zigbee2mqtt.yaml
