manifests/zwave2mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave2mqtt
  labels:
    app: zwave2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwave2mqtt
  template:
    metadata:
      labels:
        app: zwave2mqtt
    spec:
      containers:
        # https://zwave-js.github.io/zwave-js-ui/#/
        # https://github.com/zwave-js/zwavejs2mqtt
        # https://hub.docker.com/r/zwavejs/zwavejs2mqtt
        - name: zwave2mqtt
          image: zwavejs/zwavejs2mqtt:9.3.2
          # command:
          #   - "/bin/sleep"
          # args:
          #   - "9999"
          securityContext:
            runAsUser: 9999
            runAsGroup: 20 # gid 20 == dialout
            privileged: true # https://github.com/kubernetes/kubernetes/issues/5607
          volumeMounts:
            - mountPath: /usr/src/app/store
              name: data
            - mountPath: /dev/zwave
              name: tty
          ports:
            - containerPort: 8091
            - containerPort: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zwave2mqtt
        - name: tty
          hostPath:
            path: /dev/serial/by-id/usb-0658_0200-if00
---
apiVersion: v1
kind: Service
metadata:
  name: zwave2mqtt
spec:
  selector:
    app: zwave2mqtt
  ports:
    - port: 8091
      targetPort: 8091
