manifests/homescreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homescreen
spec:
  selector:
    matchLabels:
      app: homescreen
  template:
    metadata:
      labels:
        app: homescreen
    spec:
      containers:
      - name: homescreen
        image: quay.io/tsaarni/home-screen:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: homescreen
spec:
  selector:
    app: homescreen
  ports:
    - port: 80
      targetPort: 80 
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: homescreen
spec:
  virtualhost:
    fqdn: homescreen.home.protonode.fi
  routes:
    - services:
        - name: homescreen
          port: 80
